Gtk-3.20&3.22: [Budgie-Desktop] Fix gapless labels in session-dialogs

--- a/gtk/sass/3.20/_3rd-party.scss
+++ b/gtk/sass/3.20/_3rd-party.scss
@@ -597,6 +597,11 @@ $orientation: ((top, bottom),
     }
   }
 
+  box > grid > label { // add some spaces to label-end
+    &:dir(ltr) { padding-right: rem(10.7px); }
+    &:dir(rtl) { padding-left: rem(10.7px); }
+  }
+
   button,
   .linked > button {
     @extend %button_flat_normal;
